# kyc-proxy-contract

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  rust-toolchain
contract/: Cargo.toml
contract/src/: proxy.rs  test_contract.rs
synth-contract/: Cargo.toml
synth-contract/src/: proxy.rs  test_contract.rs
tests/: Cargo.toml
tests/src/: lib.rs
