[package]
name = "kyc-proxy"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "=1.4.1"
casper-types = "=1.4.1"

[[bin]]
name = "kyc-proxy"
path = "src/proxy.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "test_contract"
path = "src/test_contract.rs"
bench = false
doctest = false
test = false