[package]
name = "synth-proxy"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"

[[bin]]
name = "synth-proxy"
path = "src/proxy.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "synth-proxy-test"
path = "src/test_contract.rs"
bench = false
doctest = false
test = false